[metadata]
name = fadc-octavia-provider
version = 1.0.0
summary = Fortiadc Octavia provider 
author = fortinet.com
author_email = cs@fortinet.com
description = Fortiadc Octavia provider
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.fortinet.com/ 
license = OSI Approved :: Apache Software License

[options]
packages = find:

[options.entry_points]
octavia.api.drivers =
    fortiadc_driver = fadc_octavia_provider.driver.fortiadc_driver:FortiadcDriver

console_scripts =
    fortiadc_agent = fadc_octavia_provider.fortiadc_agent.fortiadc_worker:main
